--- a/main-service/config/config.yml
+++ b/main-service/config/config.yml
@@ -6,6 +6,7 @@ port: '8080'
 log_level: 'debug'
 
 secret_key: 'testtesttest'
+image_service_url: "http://localhost:4500"
 
 postgres:
   host: 'localhost'
